v0.1.8 update added UpdateScheduleGroup endpoint updated fastjson2 dependency from 2.0.60 to 2.0.61 minor css improvements minor refactoring
