# src/aces/webctrl/restapi/api/exec/SearchGQL.java
@@ -46,7 +46,7 @@ public class SearchGQL extends ApiBase {
         DatabaseLink link = res.createLink(0);
       ){
         CoreNode ctx,n;
-        if (contextDBID!=0){
+        if (contextDBID!=0L){
           ctx = link.getNode(contextDBID);
         }else{
           ctx = link.getNode("/trees/geographic");
